NG 1.0:
-Fix small typo in man-page
-Allow getopt() to complain about unknown options (remove opterr=0)
-Rework help output and print to stdout, not stderr

DROP10:
-Fix longstanding and unnoticed BUG:
when running in default/daemon mode arp.dat was not checkpointed and as 
such never updated.

DROP9:
-Update ethercodes.dat from nmap-3.93
-Fix usage output; -t is for mailto, not -m (thanks to Jan Ostrochovsky)
-Add -F as mailfrom option (as everybody wants it; kudos Jan Ostrochovsky)
-Change CHECKPOINT (write arp DB to file) time to 3*60 seconds, was 10*60
-Change mkdep to also use mktemp if tempfile fails

DROP8:
-New configure option "--enable-fancy-mac" so MAC adresses are printed always
in xx:xx:.. notation e.g. 00:0a: instead of 0:0a

DROP7:
-Continue merging of Debian patches
o 11opt_sendmail_path: specify sendmail prog path
o 14opt_mailto: specify mailto address
o 15opt_username: drop privileges to this username (without restart)

-Disable savestr() - functionality covered by strndup()
-Make replacement strndup() safer with checks
-Drop into daemon mode the latest possible moment
o replace some syslog() calls with fprintf()s

DROP6:
-Merge a lot of vendor fixes from Debian (thanks to Peter Kelemen)
o 06debian_manpages: man-pages for arpfetch, arp2ethers
o 21arp2ethers: misc. awk fixes
o 26unconf_iface: continue if unconfigured interface, but don't use syslog()
o 25ignore_zero_ip: don't enter IP 0.0.0.0 into db
o 22secure_tempfile: use a secure tmpfile name in bihourly, mkdep and arpfetch
o 07debian_srcdir: add some missing $(srcdir)
o 12opt_nopromisc: -p not enter the device promisc mode
o 05debian_fhs: ethercodes into share/arpwatch, arp.dat into var/lib/arpwatch

-Add more fprintf(stderr, ...) on failures and make error reporting better
-Misc cleanups

DROP5:
-Remove #ifdef DEBUG altogether - enabled by default, so what.
 Since DROP2 I had no luck with stable releases, sorry.
-Add first & dirty make install hack to install necessary files